[TARGETING] Add targeting profiler collector + toolbar item

--- a/pimcore/lib/Pimcore/Bundle/CoreBundle/Resources/config/profiler.yml
+++ b/pimcore/lib/Pimcore/Bundle/CoreBundle/Resources/config/profiler.yml
@@ -15,3 +15,11 @@ services:
                 template: 'PimcoreCoreBundle:Profiler:data_collector.html.twig'
                 id:       'pimcore'
                 priority: 500
+
+    Pimcore\Bundle\CoreBundle\DataCollector\PimcoreTargetingDataCollector:
+        tags:
+            -
+                name:     data_collector
+                template: 'PimcoreCoreBundle:Profiler:targeting_data_collector.html.twig'
+                id:       'pimcore_targeting'
+                priority: 350
